--- a/bgtp/bg.html
+++ b/bgtp/bg.html
@@ -23,8 +23,8 @@
     <script>
         // 图片列表 - 需要手动维护这个列表
         const images = [
-            'images/image1.png',
-            'images/image2.png',
+            'images/3.png',
+            'images/4.png',
             'images/image3.png',
             // 添加更多图片路径...
         ];
