--- a/bgtp/bg.html
+++ b/bgtp/bg.html
@@ -23,7 +23,7 @@
     <script>
         // 图片列表 - 需要手动维护这个列表
         const images = [
-            'images/3.png',
+            'bglovett/images/3.png',
             'images/4.png',
             // 添加更多图片路径...
         ];
