--- a/TT/shuping.html
+++ b/TT/shuping.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -888,7 +888,7 @@
             noticeElement.innerHTML = '<span class="cursor"></span>';
             
             try {
-                const response = await fetch('img/wenan.txt');
+                const response = await fetch('BGku/wenan.txt');
                 if (!response.ok) throw new Error('网络响应不正常');
                 const text = await response.text();
                 
